// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";

package ticket;

// The banker service definition.
service Ticketer {
  // Get available ticket count
  rpc GetAvailableTickets (google.protobuf.Empty) returns (AvailableTicketsResponse);
  // Buy tickets
  rpc BuyTickets (BuyTicketsRequest) returns (BuyTicketsResponse);
}

// The response message containing the available ticket count
message AvailableTicketsResponse {
  int32 count = 1;
}

// The request message to buy tickets
message BuyTicketsRequest {
  int32 count = 1;
}

// The response message to buy tickets
message BuyTicketsResponse {
  bool success = 1;
}
